2004-12-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.23.5.1 of fink-mirrors

2004-12-03  Peter O'Gorman  <peter@pogma.com>

	* gnu: update to latest from http://www.gnu.org_order/ftp.html having
	checked that they actuall work.
	* _keys: add Bosnia & Herzegovina

2004-09-24  David H. <dmalloc@users.sourceforge.net>
	* master: Removing  distfiles.lha.uk.eu.finkmirrors.net
	failure to comply with our mirror rules, admin has been warned often
	enough. Belnet mirror makes more than up for this.

2004-08-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.22.1.1 of fink-mirrors

2004-08-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.21.1.1 of fink-mirrors

2004-08-17 David H. <dmalloc@users.sourceforge.net>
	* master, rsync: Added new mirror for Europe
	Maintainer: bernard.grymonpon@belnet.be
	Info: Belnet, the Belgian Education and Research network. 
	Our network spans across Belgium and is connected to several
	international networks and on several exchange points 
	[Bnix, Ams-ix, Linx, Sfinx,... Our public FTP server is 
	running on a SunFire V440 with 3 StorEdge 3510 Arrays, 
	offering +4TB storage and is connected to our backbone 
	through a double 1000Mbps link. We are located in 
	Brussels-Belgium. 
	
	2004-08-01 David H. <dmalloc@users.sourceforge.net>
	* master, rsync: Suspended trd and per mirrors.
	Continued failures, maintainers not really responsive
	pending removal in 30 days.

2004-07-19  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* gimp: .nl is correct, not .ml. thanks to Martijn Dekker.

2004-07-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.20.6.1 of fink-mirrors

2004-07-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* _list, apt: add mirror list for apt-get repository
	* website, cvs-repository, _urls, inject.pl, install.sh: store the 
	URL's for fink-related sites in /sw/lib/fink/URL
