@@ -1,3 +1,7 @@
+2005-01-02  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* all: updated Copyright notice
+
 2004-12-20  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* VERSION: Releasing version 0.23.5.1 of fink-mirrors
